--- a/github/workflows/snake.yml
+++ b/github/workflows/snake.yml
@@ -1,1 +1,28 @@
 
+name: Generate Snake Animation 🐍
+
+on:
+  # Runs every day at midnight
+  schedule:
+    - cron: "0 0 * * *"
+  # Allows you to run it manually
+  workflow_dispatch:
+
+jobs:
+  generate-snake:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate GitHub Contribution Snake
+        uses: Platane/snk@v3
+        with:
+          github_user_name: mdonnamadeline
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v4
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
