--- a/github/workflows/snake.yml
+++ b/github/workflows/snake.yml
@@ -1,12 +1,9 @@
-
 name: Generate Snake Animation 🐍
 
 on:
-  # Runs every day at midnight
   schedule:
-    - cron: "0 0 * * *"
-  # Allows you to run it manually
-  workflow_dispatch:
+    - cron: "0 0 * * *"  # Runs every day at midnight
+  workflow_dispatch:  # Allows you to run it manually
 
 jobs:
   generate-snake:
