--- a/github/workflows/snake.yml
+++ b/github/workflows/snake.yml
@@ -1,25 +1,31 @@
-name: Generate Snake Animation 🐍
+name: Update Snake Animation 🐍
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight
-  workflow_dispatch:  # Allows you to run it manually
+    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  workflow_dispatch:      # Manual trigger
 
 jobs:
   generate-snake:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write    # Required to push changes
+
     steps:
-      - name: Generate GitHub Contribution Snake
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Generate Snake Graphic
         uses: Platane/snk@v3
         with:
           github_user_name: mdonnamadeline
           outputs: |
-            dist/github-contribution-grid-snake.svg
+            assets/github-snake.svg
 
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v4
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit & Push Changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add assets/github-snake.svg
+          git commit -m "Update snake animation"
+          git push
